src/objects/ffps_brunt__StagingHeader__c.object
<CustomObject>
    <fields>
        <fullName>ffps_brunt__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__AccountingCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DocumentCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DocumentDate__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DocumentPosted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Document Posted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__DocumentType__c</fullName>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffps_brunt__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SFContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Staging Headers</relationshipLabel>
        <relationshipName>Staging_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffps_brunt__SourceType__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing Document</fullName>
                </value>
                <value>
                    <fullName>Ad-Hoc Revenue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Staging Header</label>
    <nameField>
        <displayFormat>SH{000000}</displayFormat>
        <label>Staging Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>